@@ -1,5 +1,5 @@
 # "src/Makefile.am"
-#	$Id: Makefile.am,v 1.171.4.4 2007/07/24 03:34:59 fang Exp $
+#	$Id: Makefile.am,v 1.171.4.5 2007/07/26 19:16:18 fang Exp $
 
 # .yy for yacc (C++), .ll for lex (C++), 
 # .hchk and .tccchk for standalone header checks
@@ -295,6 +295,33 @@ builddate.h: ChangeLog
 	@{ $(ECHO) "#ifndef	BUILDDATE" ; \
 	$(ECHO) "#define	BUILDDATE	\""`$(DATE)`"\"" ; \
 	$(ECHO) "#endif	/* BUILDDATE */" ;} > $@
+
+# add more as they are needed
+# got $(docdir)? (automake 1.10)
+install_paths.h: Makefile
+	{ $(ECHO) "// "$@" -- auto-generated by Makefile" ; \
+	$(ECHO) "#ifndef	__HAC_INSTALL_PATHS_H__" ; \
+	$(ECHO) "#define	__HAC_INSTALL_PATHS_H__" ; \
+	$(ECHO) "" ; \
+	$(ECHO) "#define	PREFIX		\"$(prefix)\"" ; \
+	$(ECHO) "#define	EXECPREFIX	\"$(exec_prefix)\"" ; \
+	$(ECHO) "#define	BINDIR		\"$(bindir)\"" ; \
+	$(ECHO) "#define	SBINDIR		\"$(sbindir)\"" ; \
+	$(ECHO) "#define	DATADIR		\"$(datadir)\"" ; \
+	$(ECHO) "#define	INCLUDEDIR	\"$(includedir)\"" ; \
+	$(ECHO) "#define	LIBDIR		\"$(libdir)\"" ; \
+	$(ECHO) "#define	LIBEXECDIR	\"$(libexecdir)\"" ; \
+	$(ECHO) "#define	INFODIR		\"$(infodir)\"" ; \
+	$(ECHO) "#define	LOCALSTATEDIR	\"$(localstatedir)\"" ; \
+	$(ECHO) "#define	SHAREDSTATEDIR	\"$(sharedstatedir)\"" ; \
+	$(ECHO) "#define	MANDIR		\"$(mandir)\"" ; \
+	$(ECHO) "#define	SYSCONFDIR	\"$(sysconfdir)\"" ; \
+	$(ECHO) "#define	PKGDATADIR	\"$(pkgdatadir)\"" ; \
+	$(ECHO) "#define	PKGINCLUDEDIR	\"$(pkgincludedir)\"" ; \
+	$(ECHO) "#define	PKGLIBDIR	\"$(pkglibdir)\"" ; \
+	$(ECHO) "" ; \
+	$(ECHO) "#endif	// __HAC_INSTALL_PATHS_H__" ; \
+	} > $@
 
 # most of these should really be generated at configure-time...
 
@@ -1602,6 +1629,14 @@ EXTRA_DIST += local.cvsignore \
 	sim/chpsim/TODO
 
 TESTS += hackt_persistent_table.sh test/getopt_test.test
+
+# to force libraries to be installed BEFORE executables 
+#... automake rejects re-definition.
+# install-binPROGRAMS: install-pkglibLTLIBRARIES
+
+install-exec-hook:
+	@$(ECHO) "Re-installing binaries after libraries..."
+	$(MAKE) $(AM_MAKEFLAGS) install-binPROGRAMS
 
 installcheck-local:
 	@list='$(bin_PROGRAMS)' ; \
