@@ -5,6 +5,15 @@
 
 2007-07-26	David Fang		<fangism@users.sourceforge.net>
 
+	* HACKT-00-01-04-main-00-81-39-chpsim-06-13:
+	  Makefile.am: install-exec-hook re-installs binaries after libraries
+		to suppress really silly post-install link warnings and errors.
+		This patch can forward-port to trunk by itself, and really
+		seems like something to go upstream to GNU automake.
+	  Now generate "install_paths.h" from Makefile, for future 
+		path-dependent execution and default library searching.
+
+
 	* HACKT-00-01-04-main-00-81-39-chpsim-06-12:
 	  Object/expr/const_param_expr_list.h: operator[] replaced
 		with run-time bounds check for catching run-time errors
